# Identity-Service

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  prometheus.yml  promtail-config.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 29e2ee940577_更改_is_active_欄位_預設_false.py  88e6fd3346c8_create_users_table.py  e762d4903f21_create_user_table.py
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: admin.py  auth.py  health.py  users.py  well_known.py
app/core/: celery_app.py  config.py  db.py  limiter.py  logging.py  metrics.py  security.py
app/middleware/: log_middleware.py
app/models/: user.py
app/schemas/: auth.py  user.py
app/services/: auth_service.py  google_service.py
app/tasks/: email.py
grafana/dashboards_json/: Dashboard.json
test/: conftest.py
test/api/: test_auth.py
